--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,8 @@
 .frm {
     border: 1px solid black;
     width: 40vw;
-    text-align: center;
+    padding-left: 10px;
+    /* box-shadow: 20px 20px 20px black; */
 }
 
 .main {
@@ -16,9 +17,9 @@
 }
 
 .btn {
-    background-color: rgb(41, 156, 228);
+    background-color: rgb(18, 173, 51);
     color: white;
-    width: 30%;
+    /* width: 30%; */
     border: none;
     height: 5vh;
     margin: 2vh;
